--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2021"
 stcp = { git = "https://github.com/vivyir/stcp", rev = "0107154" }
 aes-gcm = "0.10"
 bincode = "1.3"
+[dependencies.uuid]
+version = "1.3.4"
+features = [
+    "v4",                # Lets you generate random UUIDs
+]
