--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ aes-gcm = "0.10"
 clap = { version = "4.5.4", features = ["derive", "cargo", "deprecated"] }
 bincode = "1.3"
 colored = "2.0.0"
+randomizer = "0.1.2"
+rs_sha512 = "0.1.3"
 [dependencies.uuid]
 version = "1.3.4"
 features = [
