--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ randomizer = "0.1.2"
 rs_sha512 = "0.1.3"
 diesel = { version = "2.2.1", features = ["sqlite"] }
 dotenv = "0.15.0"
+chrono = "0.4.39"
 [dependencies.uuid]
 version = "1.3.4"
 features = [
